# AI-powered-Ads-Review

./: .gitignore  Ad reviewer.rar  README.md  app.js  app.py  data.json  package-lock.json  package.json  pyproject.toml  requirements.txt  reviewAgent.js  review_agent.py
static/: script.js
templates/: index.html
